# clipsmart-main

./: .env.example  .gitignore  Dockerfile  README.md  install.bat  install.sh  pyproject.toml  requirements.txt
backend/app/: ClipboardMonitor.java  SmartInterface.java
backend/app/resources/: styles.css
backend/processing/: db_storage.py  main.py  s3_storage.py  test_s3.py
backend/processing/classification/: classify.py
backend/processing/conversion/: latex_conv.py
